Pointing to Amazon.

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -17,12 +17,12 @@
 <script src="/static/js/sockjs-0.3.4.js"></script>
 <script src="/static/js/stomp.js"></script>
 
-<script src="http://localhost:8080/rest/asset/full.js"></script>
+<!--<script src="http://localhost:8080/rest/asset/full.js"></script>
 <script src="http://localhost:8080/rest/place/full.js"></script>
-<script src="http://localhost:8080/rest/location/full.js"></script>
-<!--<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/asset/full.js"></script>
+<script src="http://localhost:8080/rest/location/full.js"></script>-->
+<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/asset/full.js"></script>
 <script src="http://neorisrest.us-east-1.elasticbeanstalk.com/place/full.js"></script>
-<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/location/full.js"></script>-->
+<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/location/full.js"></script>
 
 <script src="/static/js/config.js"></script>
 
