--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -20,9 +20,12 @@
 <!--<script src="http://localhost:8080/rest/asset/full.js"></script>
 <script src="http://localhost:8080/rest/place/full.js"></script>
 <script src="http://localhost:8080/rest/location/full.js"></script>-->
-<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/asset/full.js"></script>
+<!-- <script src="http://neorisrest.us-east-1.elasticbeanstalk.com/asset/full.js"></script>
 <script src="http://neorisrest.us-east-1.elasticbeanstalk.com/place/full.js"></script>
-<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/location/full.js"></script>
+<script src="http://neorisrest.us-east-1.elasticbeanstalk.com/location/full.js"></script> -->
+<script src="http://eluxengine.azurewebsites.net/asset/full.js"></script>
+<script src="http://eluxengine.azurewebsites.net/place/full.js"></script>
+<script src="http://eluxengine.azurewebsites.net/location/full.js"></script>
 
 <script src="/static/js/config.js"></script>
 
@@ -1014,6 +1017,7 @@ require([
                     asset.location.longitude = asset.location.place.longitude - 0.000025268539;
                     asset.location.latitude = asset.location.place.latitude - 0.00000038000539;            
                     asset.location.accuracy = 0.3;
+                    asset.task = asset.location.place.name;
                 }
                 
                 if(asset.location.mode == "NONE") {
